--- a/Configuringflask/Dockerfile
+++ b/Configuringflask/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9
 
 EXPOSE 5004
 
-WORKDIR /Configure_Flask
+WORKDIR /Configuringflask
 
 COPY requirements.txt /Configure_Flask
 RUN pip install  -r requirements.txt --upgrade pip
@@ -12,6 +12,6 @@ ENV SESSION_COOKIE_NAME=my_cookie
 ENV PROD_DATABASE_URI=my_prod_db
 ENV DEV_DATABASE_URI=my_dev_db
 
-COPY . /Configure_Flask
+COPY . /Configuringflask
 
 CMD python app.py
