--- a/Jinga/Jinga/Dockerfile
+++ b/Jinga/Jinga/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 5001
 
 WORKDIR /Jinga
 
-COPY requirements.txt /flask-jinja-tutorial
+COPY requirements.txt /Jinga
 RUN pip install  -r requirements.txt --upgrade pip
 
 COPY . /Jinga
