--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,8 @@ services:
     container_name: "Flask_App5"
     ports:
       - "5004:5004"
+     app6:
+    build: ./Flask_Factory
+    container_name: "Flask_App6"
+    ports:
+      - "5005:5005"
