--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,8 @@ services:
     container_name: "Flask_App7"
     ports:
       - "5006:5006"
+    app8:
+    build: ./Assets/assets
+    container_name: "Flask_App8"
+    ports:
+      - "5007:5007"
