--- a/Flask_Blueprint/flask-blueprint/Dockerfile
+++ b/Flask_Blueprint/flask-blueprint/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.9
 
 EXPOSE 5006
 
-WORKDIR /flask-blueprint-tutorial
+WORKDIR /flask-blueprint
 
-COPY requirements.txt /flask-blueprint-tutorial
+COPY requirements.txt /flask-blueprint
 RUN pip install  -r requirements.txt --upgrade pip
 
-COPY . /flask-blueprint-tutorial
+COPY . /flask-blueprint
 
 CMD python app.py
