--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,3 +42,8 @@ services:
     container_name: "Flask_App8"
     ports:
       - "5007:5007"
+      app9:
+    build: ./SQLAlchemy/sqlalchemy
+    container_name: "Flask_App9"
+    ports:
+      - "5008:5008"
