--- a/SQLAlchemy/sqlalchemy/Dockerfile
+++ b/SQLAlchemy/sqlalchemy/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.9
 
 EXPOSE 5008
 
-WORKDIR /flask-sqlalchemy-tutorial
+WORKDIR /sqlalchemy
 
-COPY requirements.txt /flask-sqlalchemy-tutorial
+COPY requirements.txt /sqlalchemy
 RUN pip install  -r requirements.txt --upgrade pip
 
-COPY . /flask-sqlalchemy-tutorial
+COPY . /sqlalchemy
 
 CMD python routes.py
