--- a/FlaskLogin/flask-login/Dockerfile
+++ b/FlaskLogin/flask-login/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.9
 
 EXPOSE 5009
 
-WORKDIR /flask-login-tutorial
+WORKDIR /flask-login
 
 COPY requirements.txt /flask-login-tutorial
 RUN pip install  -r requirements.txt --upgrade pip
 
-COPY . /flask-login-tutorial
+COPY . /flask-login
 
 CMD python routes.py
