--- a/Flask_Session/flask-session/Dockerfile
+++ b/Flask_Session/flask-session/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.9
 
 EXPOSE 5010
 
-WORKDIR /flask-session-tutorial
+WORKDIR /flask-session
 
-COPY requirements.txt /flask-session-tutorial
+COPY requirements.txt /flask-session
 RUN pip install  -r requirements.txt --upgrade pip
 
-COPY . /flask-session-tutorial
+COPY . /flask-session
 
 CMD python routes.py
